--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="lunch">Lunch</string>
     <string name="dinner">Dinner</string>
 
-    <string name="breakfastTitle"><b>Breakfast</b></string>
+    <string name="breakfastTitle"><b>Breakfasts</b></string>
+    <string name="lunchTitle"><b>Lunches</b></string>
+    <string name="dinnerTitle"><b>Dinners</b></string>
 
 </resources>
